--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -10,6 +10,9 @@ rpcInterface = 0.0.0.0
 # Default: rpcPort = 2001
 rpcPort = 2001
 
+# Default: rpcSSLPort = 2002
+rpcSSLPort = 2002
+
 # If databasePath is empty, the executable path is used
 # Default: databasePath =
 databasePath = /var/lib/homegear/db.sql
@@ -34,6 +37,30 @@ rfDevice = /dev/ttyACM0
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
+# Default: bidCoSResponseDelay = 95
+# Should be "95" for CUL and "100" for TI CC1100
+bidCoSResponseDelay = 95
+
+#### SSL options ####
+# You can create a new certificate pair with:
+# openssl genrsa -out /etc/homegear/homegear.key 2048
+# openssl req -new -key /etc/homegear/homegear.key -out /etc/homegear/homegear.csr
+# openssl x509 -req -in /etc/homegear/homegear.csr -signkey /etc/homegear/homegear.key -out /etc/homegear/homegear.crt
+
+# Default: certPath = /etc/homegear/homegear.crt
+certPath = /etc/homegear/homegear.crt
+
+# Default: keyPath = /etc/homegear/homegear.key
+keyPath = /etc/homegear/homegear.key
+
+# verifyCertificate checks if the server certificate received by the
+# XML RPC client from the XML RPC event server is signed by one of the
+# root CAs in /etc/ssl/certs. If you use a self signed certificate,
+# please put your root certificate in that directory. Only disable the
+# verification for testing purposes.
+# Default: verifyCertificate = true
+verifyCertificate = true
+
 # Most XML RPC client's also provide a XML RPC server for sending events to.
 # To redirect communication to a client's XML RPC server through a ssh tunnel
 # specify the client's XML RPC server address here.
@@ -41,10 +68,6 @@ logfilePath = /var/log/homegear
 # redirectToSSHTunnel = 192.168.0.1
 # redirectToSSHTunnel = fdef:abcd:bcda::1234
 # redirectToSSHTunnel = 192.168.0.10
-
-# Default: bidCoSResponseDelay = 95
-# Should be "95" for CUL and "100" for TI CC1100
-bidCoSResponseDelay = 95
 
 #### Don't change settings below unless you know exactly what you're doing ####
 
