--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -53,21 +53,20 @@ certPath = /etc/homegear/homegear.crt
 # Default: keyPath = /etc/homegear/homegear.key
 keyPath = /etc/homegear/homegear.key
 
-# verifyCertificate checks if the server certificate received by the
-# XML RPC client from the XML RPC event server is signed by one of the
-# root CAs in /etc/ssl/certs. If you use a self signed certificate,
-# please put your root certificate in that directory. Only disable the
-# verification for testing purposes.
-# Default: verifyCertificate = true
-verifyCertificate = true
+# Path to the RPC clients event server settings.
+# Default: clientSettingsPath = /etc/homegear/rpcclients.conf
+clientSettingsPath = /etc/homegear/rpcclients.conf
 
-# Most XML RPC client's also provide a XML RPC server for sending events to.
-# To redirect communication to a client's XML RPC server through a ssh tunnel
-# specify the client's XML RPC server address here.
-# Homegear replaces the provided address (or hostname) with 127.0.0.1 (or ::1 when IPv6 is used)
+# Some clients don't provide the option to set their hostname to 
+# "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
+# To redirect communication to a client's XML RPC event server through a
+# SSH tunnel in this case, specify the client's XML RPC server address 
+# here. Homegear replaces the provided address (or hostname) with 
+# 127.0.0.1 (or ::1 when IPv6 is used). Multiple entries are allowed.
 # redirectToSSHTunnel = 192.168.0.1
 # redirectToSSHTunnel = fdef:abcd:bcda::1234
 # redirectToSSHTunnel = 192.168.0.10
+# redirectToSSHTunnel = MyHostname
 
 #### Don't change settings below unless you know exactly what you're doing ####
 
