RPC server settings

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -3,16 +3,6 @@
 # Default: debugLevel = 3
 debugLevel = 3
 
-# Interface to bind RPC Server to. IPv6 is supported.
-# Default: rpcInterface = 0.0.0.0
-rpcInterface = 0.0.0.0
-
-# Default: rpcPort = 2001
-rpcPort = 2001
-
-# Default: rpcSSLPort = 2002
-rpcSSLPort = 2002
-
 # If databasePath is empty, the executable path is used
 # Default: databasePath =
 databasePath = /var/lib/homegear/db.sql
@@ -53,9 +43,13 @@ certPath = /etc/homegear/homegear.crt
 # Default: keyPath = /etc/homegear/homegear.key
 keyPath = /etc/homegear/homegear.key
 
-# Path to the RPC clients event server settings.
+# Path to the RPC clients event server settings file.
 # Default: clientSettingsPath = /etc/homegear/rpcclients.conf
 clientSettingsPath = /etc/homegear/rpcclients.conf
+
+# Path to the RPC server settings file.
+# Default: serverSettingsPath = /etc/homegear/rpcserver.conf
+serverSettingsPath = /etc/homegear/rpcserver.conf
 
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
