Basic access authentication

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -1,7 +1,7 @@
 # Homegear configuration file
 
 # Default: debugLevel = 3
-debugLevel = 3
+debugLevel = 4
 
 # If databasePath is empty, the executable path is used
 # Default: databasePath =
@@ -48,8 +48,8 @@ keyPath = /etc/homegear/homegear.key
 clientSettingsPath = /etc/homegear/rpcclients.conf
 
 # Path to the RPC server settings file.
-# Default: serverSettingsPath = /etc/homegear/rpcserver.conf
-serverSettingsPath = /etc/homegear/rpcserver.conf
+# Default: serverSettingsPath = /etc/homegear/rpcservers.conf
+serverSettingsPath = /etc/homegear/rpcservers.conf
 
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
