Basic access authentication

--- a/Miscellaneous/rpcclients.conf
+++ b/Miscellaneous/rpcclients.conf
@@ -31,3 +31,7 @@ authType = basic
 # can pose as your XML RPC event server.
 # Default: verifyCertificate = true
 verifyCertificate = true
+
+userName = myUser
+
+password = myPassword
