--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,7 @@ override_dh_auto_install:
 	mkdir -p $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/main.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/rpcclients.conf $(CURDIR)/debian/homegear/etc/homegear
+	cp $(CURDIR)/Miscellaneous/rpcservers.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp -R $(CURDIR)/Device\ types $(CURDIR)/debian/homegear/etc/homegear
 	chown -R root:root $(CURDIR)/debian/homegear/etc/homegear
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear
