--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -43,6 +43,14 @@ certPath = /etc/homegear/homegear.crt
 # Default: keyPath = /etc/homegear/homegear.key
 keyPath = /etc/homegear/homegear.key
 
+# When "loadDHParamsFromFile" is set to "false", Diffie-Hellman parameters will be generated when Homegear starts.
+# That actually is more secure, but the generation takes a long time on slow computers.
+# Default: loadDHParamsFromFile = true
+loadDHParamsFromFile = true
+
+# Default: dhParamPath = /etc/homegear/dh2048.pem
+dhParamPath = /etc/homegear/dh2048.pem
+
 # Path to the RPC clients event server settings file.
 # Default: clientSettingsPath = /etc/homegear/rpcclients.conf
 clientSettingsPath = /etc/homegear/rpcclients.conf
