--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -1,7 +1,8 @@
 [RPCServer1]
-# Interface to bind the RPC server to. IPv6 is supported.
-# Default: rpcInterface = 0.0.0.0
-interface = 0.0.0.0
+# Interface to bind the RPC server to. By default IPv4 and IPv6 are
+# enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
+# Default: rpcInterface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2001
@@ -16,9 +17,10 @@ ssl = false
 authType = none
 
 [RPCServer2]
-# Interface to bind the RPC server to. IPv6 is supported.
-# Default: rpcInterface = 0.0.0.0
-interface = 0.0.0.0
+# Interface to bind the RPC server to. By default IPv4 and IPv6 are
+# enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
+# Default: rpcInterface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2002
@@ -32,15 +34,17 @@ ssl = true
 # Default: authType = basic
 authType = none
 
-# The size in bit of the temporary Diffie-Hellman key generated at start up.
+# The size in bit of the temporary Diffie-Hellman parameters generated at start up.
+# This setting is ignored when Diffie-Hellman parameters are read from file.
 # Should be >= 1024 bit.
 # Default: diffieHellmanKeySize = 1024
 diffieHellmanKeySize = 1024
 
 [RPCServer3]
-# Interface to bind the RPC server to. IPv6 is supported.
-# Default: rpcInterface = 0.0.0.0
-interface = 0.0.0.0
+# Interface to bind the RPC server to. By default IPv4 and IPv6 are
+# enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
+# Default: rpcInterface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2003
@@ -54,7 +58,8 @@ ssl = true
 # Default: authType = basic
 authType = basic
 
-# The size in bit of the temporary Diffie-Hellman key generated at start up.
+# The size in bit of the temporary Diffie-Hellman parameters generated at start up.
+# This setting is ignored when Diffie-Hellman parameters are read from file.
 # Should be >= 1024 bit.
 # Default: diffieHellmanKeySize = 1024
 diffieHellmanKeySize = 1024
