--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -2,7 +2,7 @@
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: rpcInterface = ::
-interface = ::
+interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2001
@@ -20,7 +20,7 @@ authType = none
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: rpcInterface = ::
-interface = ::
+interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2002
@@ -44,7 +44,7 @@ diffieHellmanKeySize = 1024
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: rpcInterface = ::
-interface = ::
+interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2003
