--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -59,6 +59,10 @@ clientSettingsPath = /etc/homegear/rpcclients.conf
 # Default: serverSettingsPath = /etc/homegear/rpcservers.conf
 serverSettingsPath = /etc/homegear/rpcservers.conf
 
+# Path to scripts which can be executed by calling "runScript"
+# Default: scriptPath = /var/lib/homegear/scripts
+scriptPath = /var/lib/homegear/scripts
+
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
 # To redirect communication to a client's XML RPC event server through a
