--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -1,7 +1,7 @@
 [RPCServer1]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
-# Default: rpcInterface = ::
+# Default: interface = ::
 interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
