--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://homegear.eu
 
 Package: homegear
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsqlite3-0 (>= 3.7.13), libreadline6 (>= 6.2), adduser (>= 3.113), libssl1.0.0 (>= 1.0.1e)
+Depends: ${shlibs:Depends}, ${misc:Depends}, libsqlite3-0 (>= 3.7.13), libreadline6 (>= 6.2), adduser (>= 3.113), libssl1.0.0 (>= 1.0.1e), unzip (>= 6.0), p7zip-full (>= 9.20.1)
 Description: Program to control your HomeMatic devices
  Homegear a program to interface your home automation software 
  with your HomeMatic devices.
