--- a/debian/rules
+++ b/debian/rules
@@ -26,10 +26,12 @@ override_dh_auto_install:
 	cp $(CURDIR)/Miscellaneous/main.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/rpcclients.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/rpcservers.conf $(CURDIR)/debian/homegear/etc/homegear
-	cp -R $(CURDIR)/Device\ types $(CURDIR)/debian/homegear/etc/homegear
+	cp $(CURDIR)/Miscellaneous/GetDeviceFiles.sh $(CURDIR)/debian/homegear/etc/homegear
+	mkdir -p $(CURDIR)/debian/homegear/etc/homegear/Device\ types
 	chown -R root:root $(CURDIR)/debian/homegear/etc/homegear
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear
 	chmod 644 $(CURDIR)/debian/homegear/etc/homegear/*
+	chmod 755 $(CURDIR)/debian/homegear/etc/homegear/GetDeviceFiles.sh
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear/Device\ types
 	chmod 644 $(CURDIR)/debian/homegear/etc/homegear/Device\ types/*
 	mkdir -p $(CURDIR)/debian/homegear/etc/init.d
