--- a/debian/rules
+++ b/debian/rules
@@ -43,7 +43,7 @@ override_dh_auto_install:
 	chmod 644 $(CURDIR)/debian/homegear/etc/logrotate.d/homegear
 	mkdir -p $(CURDIR)/debian/homegear/etc/security/limits.d
 	chown root:root $(CURDIR)/debian/homegear/etc/security/limits.d
-	echo "homegear        soft    rtprio          100" >> $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
+	echo "homegear        soft    rtprio          100" > $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
 	echo "homegear        hard    rtprio          100" >> $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
 	chown root:root $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
 	chmod 644 $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
