--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -17,19 +17,8 @@ databaseMemoryJournal = true;
 # Default: databaseSynchronous = false
 databaseSynchronous = false;
 
-# Options: cul, cc1100
-# Default: rfDeviceType = cul
-rfDeviceType = cul
-
-# Default: rfDevice = /dev/ttyACM0
-rfDevice = /dev/ttyACM0
-
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
-
-# Default: bidCoSResponseDelay = 95
-# Should be "95" for CUL and "100" for TI CC1100
-bidCoSResponseDelay = 95
 
 #### SSL options ####
 # You can create a new certificate pair with:
@@ -58,6 +47,10 @@ clientSettingsPath = /etc/homegear/rpcclients.conf
 # Path to the RPC server settings file.
 # Default: serverSettingsPath = /etc/homegear/rpcservers.conf
 serverSettingsPath = /etc/homegear/rpcservers.conf
+
+# Path to the physical device settings file.
+# Default: physicalDeviceSettingsPath = /etc/homegear/physicaldevices.conf
+physicalDeviceSettingsPath = /etc/homegear/physicaldevices.conf
 
 # Path to scripts which can be executed by calling "runScript"
 # Default: scriptPath = /var/lib/homegear/scripts
