--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -1,4 +1,4 @@
-[homematicbidcos]
+[HomeMaticBidCoS]
 # Options: cul, cc1100
 deviceType = cul
 
@@ -12,7 +12,7 @@ responseDelay = 95
 # "0" for CUL. "23" or "25" for CRC
 # gpio1 = 0
 
-#[homematicwired]
+#[HomeMaticWired]
 ## Options: rs485
 #deviceType = rs485
 
