--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -8,9 +8,9 @@ device = /dev/ttyACM0
 # Should be "95" for CUL and "100" for TI CC1100
 responseDelay = 95
 
-# Default: gpio1 = 0
-# "0" for CUL. "23" or "25" for CRC
-# gpio1 = 0
+# Default: gpio1 =
+# Empty for CUL. "/sys/class/gpio/gpio23/" or "/sys/class/gpio/gpio25/" for CRC
+# gpio1 = 
 
 #[HomeMaticWired]
 ## Options: rs485
@@ -22,7 +22,7 @@ responseDelay = 95
 #responseDelay = 95
 
 ## Enable RX GPIO 
-#gpio1 = 22
+#gpio1 = /sys/class/gpio/gpio22/
 
 ## Enable TX GPIO
-#gpio2 = 17
+#gpio2 = /sys/class/gpio/gpio17/
