--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -52,6 +52,10 @@ serverSettingsPath = /etc/homegear/rpcservers.conf
 # Default: physicalDeviceSettingsPath = /etc/homegear/physicaldevices.conf
 physicalDeviceSettingsPath = /etc/homegear/physicaldevices.conf
 
+# Path to the GPIO root directory. Only relevant if one of the physical devices needs GPIO access.
+# Default: gpioPath = /sys/class/gpio
+gpioPath = /sys/class/gpio
+
 # Path to scripts which can be executed by calling "runScript"
 # Default: scriptPath = /var/lib/homegear/scripts
 scriptPath = /var/lib/homegear/scripts
