--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -1,16 +1,34 @@
 [HomeMaticBidCoS]
-# Options: cul, cc1100
+# Options: cul, cc1100, coc
 deviceType = cul
 
 device = /dev/ttyACM0
 
 # Default: responseDelay = 95
-# Should be "95" for CUL and "100" for TI CC1100
+# Should be "95" for CUL or COC and "100" for TI CC1100
 responseDelay = 95
 
 # Default: gpio1 = 0
-# Empty for CUL. "23" or "25" for CRC
+# Empty for CUL. "17" for COC. "23" or "25" for CRC
 # gpio1 = 0
+
+#[HomeMaticBidCoS]
+# Options: cul, cc1100, coc
+#deviceType = coc
+
+#device = /dev/ttyAMA0
+
+# Default: responseDelay = 95
+# Should be "95" for CUL or COC and "100" for TI CC1100
+#responseDelay = 95
+
+# Default: gpio1 = 0
+# Empty for CUL. "17" for COC. "23" or "25" for CRC
+# gpio1 = 17
+
+# Default: gpio2 = 0
+# Empty for CUL and CRC. "18" for COC.
+# gpio2 = 18
 
 #[HomeMaticWired]
 ## Options: rs485
