--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -37,7 +37,8 @@ responseDelay = 95
 #device = /dev/ttyAMA0
 
 ## Default: responseDelay = 95
-#responseDelay = 95
+## Should be "13" for RS485
+#responseDelay = 13
 
 ## Enable RX GPIO 
 #gpio1 = 22
