Support for RS485 USB modules

--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -37,11 +37,15 @@ responseDelay = 95
 #device = /dev/ttyAMA0
 
 ## Default: responseDelay = 95
-## Should be "4" for RS485
-#responseDelay = 4
+## Should be "13" for RS485. When using a USB module set responseDelay to "20".
+#responseDelay = 13
 
 ## Enable RX GPIO 
 #gpio1 = 22
 
 ## Enable TX GPIO
 #gpio2 = 17
+
+## Default: checkSentData = true
+## Set to "false" for USB devices
+#checkSentData = true
