--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -47,5 +47,5 @@ responseDelay = 95
 #gpio2 = 17
 
 ## Default: checkSentData = true
-## Set to "false" for USB devices
+## Set to "false" for USB modules
 #checkSentData = true
