BidCoS Firmware Updates

--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -1,3 +1,6 @@
+#################
+#####  CUL  #####
+#################
 [HomeMaticBidCoS]
 # Options: cul, cc1100, coc
 deviceType = cul
@@ -5,13 +8,20 @@ deviceType = cul
 device = /dev/ttyACM0
 
 # Default: responseDelay = 95
-# Should be "95" for CUL or COC and "100" for TI CC1100
+# Should be "95" for CUL or COC and "100" for TI CC1101
 responseDelay = 95
 
 # Default: gpio1 = 0
-# Empty for CUL. "17" for COC. "23" or "25" for CRC
+# Empty for CUL. "17" for COC.
 # gpio1 = 0
 
+# Default: gpio2 = 0
+# Empty for CUL. "18" for COC.
+# gpio2 = 0
+
+#################
+#####  COC  #####
+#################
 #[HomeMaticBidCoS]
 # Options: cul, cc1100, coc
 #deviceType = coc
@@ -19,17 +29,20 @@ responseDelay = 95
 #device = /dev/ttyAMA0
 
 # Default: responseDelay = 95
-# Should be "95" for CUL or COC and "100" for TI CC1100
+# Should be "95" for CUL or COC and "100" for TI CC1101
 #responseDelay = 95
 
 # Default: gpio1 = 0
-# Empty for CUL. "17" for COC. "23" or "25" for CRC
+# Empty for CUL. "17" for COC.
 # gpio1 = 17
 
 # Default: gpio2 = 0
-# Empty for CUL and CRC. "18" for COC.
+# Empty for CUL. "18" for COC.
 # gpio2 = 18
 
+#################
+##### RS485 #####
+#################
 #[HomeMaticWired]
 ## Options: rs485
 #deviceType = rs485
@@ -40,12 +53,17 @@ responseDelay = 95
 ## Should be "13" for RS485. When using a USB module set responseDelay to "20".
 #responseDelay = 13
 
-## Enable RX GPIO
+## Set to "false" for USB modules or for modules that can only send OR receive
+#oneWay = false
+
+## GPIO to enable RX or to switch between RX and TX
 #gpio1 = 22
 
-## Enable TX GPIO
+## Set GPIO to this value to enable RX
+#enableRXValue = 0
+
+## GPIO to enable TX
 #gpio2 = 17
 
-## Default: checkSentData = true
-## Set to "false" for USB modules
-#checkSentData = true
+## Set GPIO to this value to enable TX
+#enableTXValue = 0
