HomeMatic BidCoS Firmwareupdates

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -60,6 +60,10 @@ gpioPath = /sys/class/gpio
 # Default: scriptPath = /var/lib/homegear/scripts
 scriptPath = /var/lib/homegear/scripts
 
+# Path to the directory with firmware updates
+# Default: firmwarePath = /var/lib/homegear/firmware
+firmwarePath = /var/lib/homegear/firmware
+
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
 # To redirect communication to a client's XML RPC event server through a
