--- a/debian/rules
+++ b/debian/rules
@@ -48,5 +48,9 @@ override_dh_auto_install:
 	echo "homegear        hard    rtprio          100" >> $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
 	chown root:root $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
 	chmod 644 $(CURDIR)/debian/homegear/etc/security/limits.d/homegear
+	mkdir -p $(CURDIR)/debian/homegear/var/lib/homegear/firmware
+	cp $(CURDIR)/Miscellaneous/firmwareDir/GetFirmwareUpdates.sh $(CURDIR)/debian/homegear/var/lib/homegear/firmware
+	chown -R root:root $(CURDIR)/debian/homegear/var/lib/homegear/firmware
+	chmod -R 550 $(CURDIR)/debian/homegear/var/lib/homegear/firmware
 %:
 	dh $@
