Fixed error in help text

--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -50,13 +50,13 @@ responseDelay = 95
 #device = /dev/ttyAMA0
 
 ## Default: responseDelay = 95
-## Should be "13" for RS485. When using a USB module set responseDelay to "20".
+## Should be "13" for serial modules and "20" for USB modules.
 #responseDelay = 13
 
-## Set to "false" for USB modules or for modules that can only send OR receive
+## Set to "true" for USB modules
 #oneWay = false
 
-## GPIO to enable RX or to switch between RX and TX
+## GPIO to enable RX
 #gpio1 = 22
 
 ## Set GPIO to this value to enable RX
