--- a/Miscellaneous/physicaldevices.conf
+++ b/Miscellaneous/physicaldevices.conf
@@ -1,6 +1,6 @@
-#################
-#####  CUL  #####
-#################
+#################################
+############## CUL ##############
+#################################
 [HomeMaticBidCoS]
 # Options: cul, cc1100, coc
 deviceType = cul
@@ -19,9 +19,9 @@ responseDelay = 95
 # Empty for CUL. "18" for COC.
 # gpio2 = 0
 
-#################
-#####  COC  #####
-#################
+#################################
+############## COC ##############
+#################################
 #[HomeMaticBidCoS]
 # Options: cul, cc1100, coc
 #deviceType = coc
@@ -40,9 +40,26 @@ responseDelay = 95
 # Empty for CUL. "18" for COC.
 # gpio2 = 18
 
-#################
-##### RS485 #####
-#################
+#################################
+###### RS485 - USB Module  ######
+#################################
+#[HomeMaticWired]
+## Options: rs485
+#deviceType = rs485
+
+## Mostly /dev/ttyACM0 or /dev/ttyUSB0
+#device = /dev/ttyUSB0
+
+## Default: responseDelay = 95
+## Should be "13" for serial modules and "20" for USB modules.
+#responseDelay = 20
+
+## Set to "true" for USB modules
+#oneWay = true
+
+#################################
+##### RS485 - Serial Module #####
+#################################
 #[HomeMaticWired]
 ## Options: rs485
 #deviceType = rs485
@@ -66,4 +83,4 @@ responseDelay = 95
 #gpio2 = 17
 
 ## Set GPIO to this value to enable TX
-#enableTXValue = 0
+#enableTXValue = 1
