--- a/debian/rules
+++ b/debian/rules
@@ -52,5 +52,10 @@ override_dh_auto_install:
 	cp $(CURDIR)/Miscellaneous/firmwareDir/GetFirmwareUpdates.sh $(CURDIR)/debian/homegear/var/lib/homegear/firmware
 	chown -R root:root $(CURDIR)/debian/homegear/var/lib/homegear/firmware
 	chmod -R 550 $(CURDIR)/debian/homegear/var/lib/homegear/firmware
+	mkdir -p $(CURDIR)/debian/homegear/var/lib/homegear/modules
+	cp $(CURDIR)/lib/Modules/Release/*.so $(CURDIR)/debian/homegear/var/lib/homegear/modules/*.so
+	rename 's/lib/mod_/' $(CURDIR)/debian/homegear/var/lib/homegear/modules/*.so
+	chown -R root:root $(CURDIR)/debian/homegear/var/lib/homegear/modules
+	chmod -R 550 $(CURDIR)/debian/homegear/var/lib/homegear/modules
 %:
 	dh $@
