Multiple physical interface support

--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -48,9 +48,9 @@ clientSettingsPath = /etc/homegear/rpcclients.conf
 # Default: serverSettingsPath = /etc/homegear/rpcservers.conf
 serverSettingsPath = /etc/homegear/rpcservers.conf
 
-# Path to the physical device settings file.
-# Default: physicalDeviceSettingsPath = /etc/homegear/physicaldevices.conf
-physicalDeviceSettingsPath = /etc/homegear/physicaldevices.conf
+# Path to the physical interface settings file.
+# Default: physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
+physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
 
 # Path to the GPIO root directory. Only relevant if one of the physical devices needs GPIO access.
 # Default: gpioPath = /sys/class/gpio
