New XML RPC methods

--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -65,4 +65,4 @@ authType = basic
 diffieHellmanKeySize = 1024
 
 # Comma separated list of user names created with Homegear's CLI.
-validUsers = user1
+validUsers = homegear
