--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -1,4 +1,24 @@
 #################################
+############## CUL ##############
+#################################
+[HomeMaticBidCoS]
+# Specify an unique id here to identify this device in Homegear
+id = My-CUL
+
+# When default is set to "true" Homegear will assign this device
+# to new peers.
+default = true
+
+# Options: cul, cc1100, coc, hmcfglan, hmlgw
+deviceType = cul
+
+device = /dev/ttyACM0
+
+# Default: responseDelay = 95
+# Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
+responseDelay = 95
+
+#################################
 ########## HM-CFG-LAN ###########
 #################################
 ##[HomeMaticBidCoS]
@@ -9,7 +29,7 @@
 ## to new peers.
 #default = true
 
-## Options: cul, cc1100, coc, hmcfglan
+## Options: cul, cc1100, coc, hmcfglan, hmlgw
 #deviceType = hmcfglan
 
 ## IP address of your HM-CFG-LAN
@@ -36,28 +56,52 @@
 ##oldRFKey = 00112233445566778899AABBCCDDEEFF
 
 ## Default: responseDelay = 95
-## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN
+## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
 #responseDelay = 60
 
 #################################
-############## CUL ##############
+############ HM-LGW #############
 #################################
-[HomeMaticBidCoS]
-# Specify an unique id here to identify this device in Homegear
-id = My-CUL
+##[HomeMaticBidCoS]
+## Specify an unique id here to identify this device in Homegear
+#id = My-HM-LGW
 
-# When default is set to "true" Homegear will assign this device
-# to new peers.
-default = true
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
 
-# Options: cul, cc1100, coc, hmcfglan
-deviceType = cul
+## Options: cul, cc1100, coc, hmcfglan, hmlgw
+#deviceType = hmlgw
 
-device = /dev/ttyACM0
+## IP address of your HM-LGW
+#host = 192.168.178.100
 
-# Default: responseDelay = 95
-# Should be "95" for CUL or COC and "100" for TI CC1101
-responseDelay = 95
+## First Port number your HM-LGW listens on. Normally 2000.
+#port = 2000
+
+## Keep alive port number your HM-LGW listens on. Normally 2001.
+#portKeepAlive = 2001
+
+## Put the security key printed on your HM-LGW here
+#lanKey = SecurityKey
+
+## Specify an AES key here to protect your wireless communication
+## This is optional but highly recommended!
+#rfKey = 00112233445566778899AABBCCDDEEFF
+
+## Uncomment this when you set rfKey. With each key change
+## currentRFKeyIndex needs to be incremented by 1
+#currentRFKeyIndex = 1
+
+## When you change rfKey, put the old key here. To
+## change the key Homegear needs to know the old and
+## the new one.
+## !!! Do not set oldRFKey when you set rfKey for the first time !!!
+##oldRFKey = 00112233445566778899AABBCCDDEEFF
+
+## Default: responseDelay = 95
+## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
+#responseDelay = 60
 
 #################################
 ######### COC, CSM, CCD #########
@@ -70,14 +114,14 @@ responseDelay = 95
 ## to new peers.
 #default = true
 
-## Options: cul, cc1100, coc, hmcfglan
+## Options: cul, cc1100, coc, hmcfglan, hmlgw
 ## Also use "coc" for CCD and CSM
 #deviceType = coc
 
 #device = /dev/ttyAMA0
 
 ## Default: responseDelay = 95
-## Should be "95" for CUL or COC and "100" for TI CC1101
+## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
 #responseDelay = 95
 
 ## Default: gpio1 = 0
