--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -3,6 +3,10 @@
 # Default: debugLevel = 3
 debugLevel = 4
 
+# Prints log information helping in fixing errors
+# Default: devLog = false
+devLog = false
+
 # If databasePath is empty, the executable path is used
 # Default: databasePath =
 databasePath = /var/lib/homegear/db.sql
