--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -42,11 +42,10 @@ responseDelay = 95
 #lanKey = 00112233445566778899AABBCCDDEEFF
 
 ## Specify an AES key here to protect your wireless communication
-## This is optional but highly recommended!
 #rfKey = 00112233445566778899AABBCCDDEEFF
 
-## Uncomment this when you set rfKey. With each key change
-## currentRFKeyIndex needs to be incremented by 1
+## With each key change currentRFKeyIndex needs to be
+## incremented by 1
 #currentRFKeyIndex = 1
 
 ## When you change rfKey, put the old key here. To
@@ -86,11 +85,10 @@ responseDelay = 95
 #lanKey = SecurityKey
 
 ## Specify an AES key here to protect your wireless communication
-## This is optional but highly recommended!
 #rfKey = 00112233445566778899AABBCCDDEEFF
 
-## Uncomment this when you set rfKey. With each key change
-## currentRFKeyIndex needs to be incremented by 1
+## With each key change currentRFKeyIndex needs to be
+## incremented by 1
 #currentRFKeyIndex = 1
 
 ## When you change rfKey, put the old key here. To
