--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -97,3 +97,42 @@ workerThreadWindow = 3000
 
 # Default: rpcServerThreadPriority = 0
 rpcServerThreadPriority = 0
+
+# Default: rpcServerThreadPolicy = SCHED_OTHER
+# Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
+rpcServerThreadPolicy = SCHED_OTHER
+
+# Default: rpcClientThreadPriority = 0
+rpcClientThreadPriority = 0
+
+# Default: rpcClientThreadPolicy = SCHED_OTHER
+# Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
+rpcClientThreadPolicy = SCHED_OTHER
+
+# Default: workerThreadPriority = 0
+workerThreadPriority = 0
+
+# Default: workerThreadPolicy = SCHED_OTHER
+# Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
+workerThreadPolicy = SCHED_OTHER
+
+# Default: packetQueueThreadPriority = 45
+packetQueueThreadPriority = 45
+
+# Default: packetQueueThreadPolicy = SCHED_FIFO
+# Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
+packetQueueThreadPolicy = SCHED_FIFO
+
+# Default: packetReceivedThreadPriority = 0
+packetReceivedThreadPriority = 0
+
+# Default: packetReceivedThreadPolicy = SCHED_OTHER
+# Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
+packetReceivedThreadPolicy = SCHED_OTHER
+
+# Default: eventTriggerThreadPriority = 0
+eventTriggerThreadPriority = 0
+
+# Default: eventTriggerThreadPolicy = SCHED_OTHER
+# Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
+eventTriggerThreadPolicy = SCHED_OTHER
