--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -1,7 +1,10 @@
 #################################
 ############## CUL ##############
 #################################
+
+# The device family this interface is for
 [HomeMaticBidCoS]
+
 # Specify an unique id here to identify this device in Homegear
 id = My-CUL
 
@@ -21,7 +24,10 @@ responseDelay = 95
 #################################
 ########## HM-CFG-LAN ###########
 #################################
-##[HomeMaticBidCoS]
+
+## The device family this interface is for
+#[HomeMaticBidCoS]
+
 ## Specify an unique id here to identify this device in Homegear
 #id = My-HM-CFG-LAN
 
@@ -61,7 +67,10 @@ responseDelay = 95
 #################################
 ############ HM-LGW #############
 #################################
-##[HomeMaticBidCoS]
+
+## The device family this interface is for
+#[HomeMaticBidCoS]
+
 ## Specify an unique id here to identify this device in Homegear
 #id = My-HM-LGW
 
@@ -104,7 +113,10 @@ responseDelay = 95
 #################################
 ######### COC, CSM, CCD #########
 #################################
-##[HomeMaticBidCoS]
+
+## The device family this interface is for
+#[HomeMaticBidCoS]
+
 ## Specify an unique id here to identify this device in Homegear
 #id = My-COC
 
@@ -133,7 +145,10 @@ responseDelay = 95
 #################################
 ###### RS485 - USB Module  ######
 #################################
+
+## The device family this interface is for
 #[HomeMaticWired]
+
 ## Specify an unique id here to identify this device in Homegear
 #id = My-COC
 
@@ -153,7 +168,10 @@ responseDelay = 95
 #################################
 ##### RS485 - Serial Module #####
 #################################
+
+## The device family this interface is for
 #[HomeMaticWired]
+
 ## Specify an unique id here to identify this device in Homegear
 #id = My-RS485
 
