--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -48,6 +48,8 @@ responseDelay = 95
 #lanKey = 00112233445566778899AABBCCDDEEFF
 
 ## Specify an AES key here to protect your wireless communication
+## !!! IMPORTANT: Never ever lose this key, as it will render your devices useless
+## To remove the key from your devices, you need to factory reset them
 #rfKey = 00112233445566778899AABBCCDDEEFF
 
 ## With each key change currentRFKeyIndex needs to be
@@ -94,6 +96,8 @@ responseDelay = 95
 #lanKey = SecurityKey
 
 ## Specify an AES key here to protect your wireless communication
+## !!! IMPORTANT: Never ever lose this key, as it will render your devices useless
+## To remove the key from your devices, you need to factory reset them
 #rfKey = 00112233445566778899AABBCCDDEEFF
 
 ## With each key change currentRFKeyIndex needs to be
