--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -1,3 +1,8 @@
+___________________________________________________________________________
+
+---------------------------- HomeMatic BidCoS  ----------------------------
+___________________________________________________________________________
+
 #################################
 ############## CUL ##############
 #################################
@@ -146,6 +151,11 @@ responseDelay = 95
 ## "18" for COC. "22" for CCD. Empty for CSM.
 #gpio2 = 18
 
+___________________________________________________________________________
+
+----------------------------- HomeMatic Wired -----------------------------
+___________________________________________________________________________
+
 #################################
 ###### RS485 - USB Module  ######
 #################################
@@ -202,3 +212,61 @@ responseDelay = 95
 
 ## Set GPIO to this value to enable TX
 #enableTXValue = 1
+
+___________________________________________________________________________
+
+---------------------------------- MAX!  ----------------------------------
+___________________________________________________________________________
+
+#################################
+############## CUL ##############
+#################################
+
+## The device family this interface is for
+#[MAX]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-MAX-CUL
+
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
+
+## Options: cul, coc
+#deviceType = cul
+
+#device = /dev/ttyACM0
+
+## Should be "45" for MAX!
+#responseDelay = 45
+
+#################################
+######### COC, CSM, CCD #########
+#################################
+
+## The device family this interface is for
+#[MAX]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-MAX-COC
+
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
+
+## Options: cul, coc
+## Also use "coc" for CCD and CSM
+#deviceType = coc
+
+#device = /dev/ttyAMA0
+
+## Should be "45" for MAX!
+#responseDelay = 45
+
+## Default: gpio1 = 0
+## "17" for COC and CCD. Empty for CSM.
+#gpio1 = 17
+
+## Default: gpio2 = 0
+## "18" for COC. "22" for CCD. Empty for CSM.
+#gpio2 = 18
