--- a/debian/rules
+++ b/debian/rules
@@ -31,9 +31,13 @@ override_dh_auto_install:
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear
 	chmod 644 $(CURDIR)/debian/homegear/etc/homegear/*
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear/GetDeviceFiles.sh
+	mkdir -p $(CURDIR)/debian/homegear/etc/homegear/devices/2
 	mkdir -p $(CURDIR)/debian/homegear/etc/homegear/devices/4
+	cp $(CURDIR)/Miscellaneous/Device\ Description\ Files/INSTEON/* $(CURDIR)/debian/homegear/etc/homegear/devices/2
 	cp $(CURDIR)/Miscellaneous/Device\ Description\ Files/MAX/* $(CURDIR)/debian/homegear/etc/homegear/devices/4
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear/devices
+	chmod 755 $(CURDIR)/debian/homegear/etc/homegear/devices/2
+	chmod 644 $(CURDIR)/debian/homegear/etc/homegear/devices/2/*
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear/devices/4
 	chmod 644 $(CURDIR)/debian/homegear/etc/homegear/devices/4/*
 	chown -R root:root $(CURDIR)/debian/homegear/etc/homegear
